--- a/index.html
+++ b/index.html
@@ -59,5 +59,9 @@
                 <a href="./Public/contact.html">Click here to see my Contact Details</a>
             </li>
         </ul>
+        <footer>
+            <hr>
+            <p>&copy 2024 | Sanket Dahotre | Trimond Media</p>
+        </footer>
     </body>
 </html>
